--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "dayjs": "^1.11.6",
-    "mapbox-gl": "^2.11.1",
+    "mapbox-gl": "^2.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-map-gl": "^7.0.20",
+    "react-map-gl": "^7.0.21",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -44,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "html-loader": "^4.2.0"
   }
 }
