--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-map-gl": "^7.0.21",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "recharts": "^2.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
